--- a/index.html
+++ b/index.html
@@ -175,31 +175,111 @@ a img:active {
   <!-- KV -->
   <div class="sec-1 position-relative">
     <img src="./img/kv_bg_mb.png" class="img-fluid">
-    <img src="./img/kv_font1_mb.png" class="img-fluid kv_font1 position-absolute">
-    <img src="./img/kv_font2_mb.png" class="img-fluid kv_font2 position-absolute">
+    <img src="./img/kv_font1.png" class="img-fluid kv_font1 position-absolute">
+    <img src="./img/kv_font2.png" class="img-fluid kv_font2 position-absolute">
     <img src="./img/kv_block_mb.png" class="img-fluid kv_block position-absolute">
-    <img src="./img/kv_product_mb.png" class="img-fluid kv_product position-absolute">
+    <img src="./img/kv_product.png" class="img-fluid kv_product position-absolute">
   </div>
 
   <!-- 內容 -->
 
 <div class="sec-2">
-  <img src="./img/body_1_mb.png" class="img-fluid body_bg1 position-absolute">
+  
+     <img src="./img/body_1.png" class="img-fluid body_bg1 position-absolute">
      <img src="./img/body_title_1.png" class="img-fluid body_title_1  mx-auto  text-center">
      <img src="./img/body_title_2.png" class="img-fluid body_title_2  mx-auto  text-center">
      <img src="./img/body_product.png" class="img-fluid body_product mx-auto  text-center">
      
-    
+     <!--優點（球）-->
       <div class="position-absolute img-fluid ball_1">
-        <img src="./img/ball.png" class="img-fluid  ball_1_size">
-        <div>
-        <img src="./img/ball1_1.png" class="img-fluid position-absolute  ball1_font1">
-        <img src="./img/ball1_2.png" class="img-fluid position-absolute  ball1_font2">
-        <img src="./img/ball1_3.png" class="img-fluid position-absolute  ball1_font3">
-        </div>
+          <img src="./img/ball.png" class="img-fluid  ball_size">
+          <div>
+            <img src="./img/ball1_1.png" class="img-fluid position-absolute  ball1_font1">
+            <img src="./img/ball1_2.png" class="img-fluid position-absolute  ball1_font2">
+            <img src="./img/ball1_3.png" class="img-fluid position-absolute  ball1_font3">
+          </div>
+      </div>
+
+      <div class="position-absolute img-fluid ball_2">
+          <img src="./img/ball.png" class="img-fluid  ball_size">
+          <div>
+            <img src="./img/ball2_1.png" class="img-fluid position-absolute  ball2_font1">
+            <img src="./img/ball2_2.png" class="img-fluid position-absolute  ball2_font2">
+            <img src="./img/ball2_3.png" class="img-fluid position-absolute  ball2_font3">
+          </div>
+      </div>
+
+      <div class="position-absolute img-fluid ball_3">
+          <img src="./img/ball.png" class="img-fluid  ball_size">
+          <div>
+            <img src="./img/ball3_1.png" class="img-fluid position-absolute  ball3_font1">
+            <img src="./img/ball3_2.png" class="img-fluid position-absolute  ball3_font2">
+          </div>
+      </div>
+      <!--point-->          
+      <div>
+         <img src="./img/point1_font.png" class="img-fluid position-absolute point1_font">
+         <img src="./img/point1_paper.png"class="img-fluid position-absolute point1_paper">
+         <div class="point1_motion1_po">
+          <img src="./img/point1_motion1.png"class="img-fluid position-absolute point1_m1">
+          <img src="./img/point1_motion2.png"class="img-fluid position-absolute point1_m2">
+          <img src="./img/point1_motion3.png"class="img-fluid position-absolute point1_m3">
+         </div>
+      </div>
+     <div>
+         <img src="./img/point2_font.png" class="img-fluid position-absolute point2_font">
      </div>
+     <div>
+      <img src="./img/point3_font.png" class="img-fluid position-absolute point3_font">
+      <img src="./img/point3_30%.png" class="img-fluid position-absolute point3_30">
+      <img src="./img/point3_motion1.png" class="img-fluid position-absolute point3_m1">
+      <img src="./img/point3_motion2.png" class="img-fluid position-absolute point3_m2">
+    </div>
+ </div>
 
-
+ <div class="sec-3">
+  <img src="./img/body1_block.png" class="img-fluid body1_block ">
+  <img src="./img/body2.png" class="img-fluid" style="margin-top: -1px;">
+  <div class="logo-1 d-flex position-absolute">
+   <a href="https://www.momoshop.com.tw/main/Main.jsp" class="me-1"> 
+    <img src="./img/logo1_1.png" class="img-fluid">
+   </a>
+   <a href="https://shopee.tw/" class="me-1"> 
+    <img src="./img/logo1_2.png" class="img-fluid">
+   </a>
+   <a href="https://24h.pchome.com.tw/" class="me-1"> 
+    <img src="./img/logo1_3.png" class="img-fluid">
+   </a>
+   <a href="https://tw.buy.yahoo.com/" class="me-1"> 
+    <img src="./img/logo1_4.png" class="img-fluid">
+   </a>
+  </div>
+  <div class="logo-2 d-flex position-absolute">
+    <a href="#" class="me-1"> 
+     <img src="./img/logo2_1.png" class="img-fluid">
+    </a>
+    <a href="#/" class="me-1"> 
+     <img src="./img/logo2_2.png" class="img-fluid">
+    </a>
+    <a href="#" class="me-1"> 
+     <img src="./img/logo2_3.png" class="img-fluid">
+    </a>
+    <a href="#" class="me-1"> 
+     <img src="./img/logo2_4.png" class="img-fluid">
+    </a>
+    <a href="#" class="me-1"> 
+     <img src="./img/logo2_5.png" class="img-fluid">
+     </a>
+    <a href="#" class="me-1"> 
+     <img src="./img/logo2_6.png" class="img-fluid">
+    </a>
+    <a href="#" class="me-1"> 
+     <img src="./img/logo2_7.png" class="img-fluid">
+    </a>
+    <a href="#" class="me-1"> 
+     <img src="./img/logo2_8.png" class="img-fluid">
+    </a>
+   </div>
 
  </div>
 
