--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@ a img:active {
           </div>
       </div>
       <!--point-->          
-      <div>
+      <div class="position-absolute img-fluid point1">
+        <div>
          <img src="./img/point1_font.png" class="img-fluid position-absolute point1_font">
          <img src="./img/point1_paper.png"class="img-fluid position-absolute point1_paper">
          <div class="point1_motion1_po">
@@ -225,15 +226,19 @@ a img:active {
           <img src="./img/point1_motion2.png"class="img-fluid position-absolute point1_m2">
           <img src="./img/point1_motion3.png"class="img-fluid position-absolute point1_m3">
          </div>
+        </div>
       </div>
-     <div>
+
+     <div class="position-absolute img-fluid point2">
          <img src="./img/point2_font.png" class="img-fluid position-absolute point2_font">
      </div>
-     <div>
+     <div class="position-absolute img-fluid point3"> 
+       <div>
       <img src="./img/point3_font.png" class="img-fluid position-absolute point3_font">
-      <img src="./img/point3_30%.png" class="img-fluid position-absolute point3_30">
+      <img src="./img/point3_30.png" class="img-fluid position-absolute point3_30">
       <img src="./img/point3_motion1.png" class="img-fluid position-absolute point3_m1">
       <img src="./img/point3_motion2.png" class="img-fluid position-absolute point3_m2">
+     </div>
     </div>
  </div>
 
