--- a/index.html
+++ b/index.html
@@ -174,10 +174,11 @@ a img:active {
 
   <!-- KV -->
   <div class="sec-1 position-relative">
-    <img src="./img/kv_bg_mb.png" class="img-fluid">
+    <img src="./img/kv_bg_mb.png" class="img-fluid d-md-none ">
+    <img src="./img/kv_bg.png" class="img-fluid d-none d-md-block w-100">
     <img src="./img/kv_font1.png" class="img-fluid kv_font1 position-absolute">
     <img src="./img/kv_font2.png" class="img-fluid kv_font2 position-absolute">
-    <img src="./img/kv_block_mb.png" class="img-fluid kv_block position-absolute">
+    <img src="./img/kv_block_mb.png" class="img-fluid kv_block position-absolute d-md-none">
     <img src="./img/kv_product.png" class="img-fluid kv_product position-absolute">
   </div>
 
@@ -185,7 +186,8 @@ a img:active {
 
 <div class="sec-2">
   
-     <img src="./img/body_1.png" class="img-fluid body_bg1 position-absolute">
+     <img src="./img/body_1.png" class="img-fluid body_bg1 position-absolute d-md-none">
+     <img src="./img/body_1_web.png" class="img-fluid body_bg1 position-absolute d-none d-md-block w-100">
      <img src="./img/body_title_1.png" class="img-fluid body_title_1  mx-auto  text-center">
      <img src="./img/body_title_2.png" class="img-fluid body_title_2  mx-auto  text-center">
      <img src="./img/body_product.png" class="img-fluid body_product mx-auto  text-center">
@@ -230,7 +232,10 @@ a img:active {
       </div>
 
      <div class="position-absolute img-fluid point2">
-         <img src="./img/point2_font.png" class="img-fluid position-absolute point2_font">
+         <img src="./img/point2_font.png" class="img-fluid position-absolute point2_font d-md-none">
+         <img src="./img/point2_bg.png" class="img-fluid position-absolute point2_bg ">
+         <img src="./img/c_t.gif" class="img-fluid position-absolute point2_gif">
+         <img src="./img/point2_font_web.png" class="img-fluid position-absolute point2_font d-none d-md-block">
      </div>
      <div class="position-absolute img-fluid point3"> 
        <div>
