--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ a img:active {
 
 
 
-
+<div>
   <!-- KV -->
   <div class="sec-1 position-relative">
     <img src="./img/kv_bg_mb.png" class="img-fluid d-md-none ">
@@ -290,8 +290,10 @@ a img:active {
      <img src="./img/logo2_8.png" class="img-fluid">
     </a>
    </div>
-
  </div>
+
+ 
+</div>
 
   <!-- Footer -->
 	<div id="footer">
