--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@ a img:active {
   </script>
 
   <!-- 產品選單 -->
-  <div class="position-relative d-flex justify-content-center align-items-center   " style="height: 182px;width: 100%;background-color: #E7FBFF;">
-    <a href="#"><img src="./img/pd-1.png" class="img-fluid mx-2 "></a>
-    <a href="#"><img src="./img/pd-2.png" class="img-fluid mx-2 "></a>
+  <div class="position-relative d-flex justify-content-center align-items-center  bd_menu ">
+    <a href="#"><img src="./img/pd-1.png" class="img-fluid mx-2 pd_mb "></a>
+    <a href="#"><img src="./img/pd-2.png" class="img-fluid mx-2 pd_mb "></a>
   </div>
   </div>
   <!-- 標題 -->
