--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <link rel="stylesheet" href="./code/animate.css">
 <link rel="stylesheet" type="text/css" href="./code/common.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+<link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 <link rel="stylesheet" href="./code/pd-style.css">
-
 <!-- js -->
 <script src="./code/jquery-2.2.2.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
@@ -177,7 +177,7 @@ a img:active {
     <img src="./img/kv_bg_mb.png" class="img-fluid d-md-none ">
     <img src="./img/kv_bg.png" class="img-fluid d-none d-md-block w-100">
     <img src="./img/kv_font1.png" class="img-fluid kv_font1 position-absolute">
-    <img src="./img/kv_font2.png" class="img-fluid kv_font2 position-absolute">
+    <img src="./img/kv_font2.gif" class="img-fluid kv_font2 position-absolute">
     <img src="./img/kv_block_mb.png" class="img-fluid kv_block position-absolute d-md-none">
     <img src="./img/kv_product.png" class="img-fluid kv_product position-absolute">
   </div>
@@ -188,7 +188,8 @@ a img:active {
   
      <img src="./img/body_1.png" class="img-fluid body_bg1 position-absolute d-md-none">
      <img src="./img/body_1_web.png" class="img-fluid body_bg1 position-absolute d-none d-md-block w-100">
-     <img src="./img/body_title_1.png" class="img-fluid body_title_1  mx-auto  text-center">
+     <img src="./img/body_title_1.png" class="img-fluid body_title_1 mx-auto text-center 
+               animate__animated animate__pulse animate__infinite  animate__slow">
      <img src="./img/body_title_2.png" class="img-fluid body_title_2  mx-auto  text-center">
      <img src="./img/body_product.png" class="img-fluid body_product mx-auto  text-center">
      
@@ -197,7 +198,8 @@ a img:active {
           <img src="./img/ball.png" class="img-fluid  ball_size">
           <div>
             <img src="./img/ball1_1.png" class="img-fluid position-absolute  ball1_font1">
-            <img src="./img/ball1_2.png" class="img-fluid position-absolute  ball1_font2">
+            <img src="./img/ball1_2.png" class="img-fluid position-absolute  ball1_font2 
+                     animate__animated animate__rubberBand animate__infinite animate__delay-3s ">
             <img src="./img/ball1_3.png" class="img-fluid position-absolute  ball1_font3">
           </div>
       </div>
@@ -206,7 +208,8 @@ a img:active {
           <img src="./img/ball.png" class="img-fluid  ball_size">
           <div>
             <img src="./img/ball2_1.png" class="img-fluid position-absolute  ball2_font1">
-            <img src="./img/ball2_2.png" class="img-fluid position-absolute  ball2_font2">
+            <img src="./img/ball2_2.png" class="img-fluid position-absolute  ball2_font2
+                      animate__animated animate__heartBeat " style="z-index: 2;">
             <img src="./img/ball2_3.png" class="img-fluid position-absolute  ball2_font3">
           </div>
       </div>
@@ -215,7 +218,8 @@ a img:active {
           <img src="./img/ball.png" class="img-fluid  ball_size">
           <div>
             <img src="./img/ball3_1.png" class="img-fluid position-absolute  ball3_font1">
-            <img src="./img/ball3_2.png" class="img-fluid position-absolute  ball3_font2">
+            <img src="./img/ball3_2.png" class="img-fluid position-absolute  ball3_font2
+            animate__animated  animate__pulse_30">
           </div>
       </div>
       <!--point-->          
@@ -224,10 +228,14 @@ a img:active {
          <img src="./img/point1_font.png" class="img-fluid position-absolute point1_font">
          <img src="./img/point1_paper.png"class="img-fluid position-absolute point1_paper">
          <div class="point1_motion1_po">
+          <img src="./img/point1_m.gif"class="img-fluid position-absolute  point1_gif ">
+          <!--
           <img src="./img/point1_motion1.png"class="img-fluid position-absolute point1_m1">
           <img src="./img/point1_motion2.png"class="img-fluid position-absolute point1_m2">
           <img src="./img/point1_motion3.png"class="img-fluid position-absolute point1_m3">
-         </div>
+          -->
+     
+        </div>
         </div>
       </div>
 
@@ -241,8 +249,8 @@ a img:active {
        <div>
       <img src="./img/point3_font.png" class="img-fluid position-absolute point3_font">
       <img src="./img/point3_30.png" class="img-fluid position-absolute point3_30">
-      <img src="./img/point3_motion1.png" class="img-fluid position-absolute point3_m1">
-      <img src="./img/point3_motion2.png" class="img-fluid position-absolute point3_m2">
+      <img src="./img/point3_motion1.png" class="img-fluid position-absolute point3_m1 shake-vertical">
+      <img src="./img/point3_motion2.png" class="img-fluid position-absolute point3_m2 shake-vertical2">
      </div>
     </div>
  </div>
