--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ a img:active {
 
 
   <!-- MB選單 -->
-  <div class="mainBar d-flex d-md-none" style="height: 80px;width: 100%">
+  <div class="mainBar d-flex d-md-none" style="height: 60px;width: 100%">
     <div class="opportunity w-50">
       <button class="btn btn-secondary" type="button" id="Opportunity-Click" onclick="FunctionOpportunity()">使用時機推薦</button>
     </div>
@@ -242,7 +242,7 @@ a img:active {
      <div class="position-absolute img-fluid point2">
          <img src="./img/point2_font.png" class="img-fluid position-absolute point2_font d-md-none">
          <img src="./img/point2_bg.png" class="img-fluid position-absolute point2_bg ">
-         <img src="./img/c_t.gif" class="img-fluid position-absolute point2_gif">
+         <img src="./img/com_t.gif" class="img-fluid position-absolute point2_gif">
          <img src="./img/point2_font_web.png" class="img-fluid position-absolute point2_font d-none d-md-block">
      </div>
      <div class="position-absolute img-fluid point3"> 
@@ -256,8 +256,8 @@ a img:active {
  </div>
 
  <div class="sec-3">
-  <img src="./img/body1_block.png" class="img-fluid body1_block ">
-  <img src="./img/body2.png" class="img-fluid" style="margin-top: -1px;">
+ <!-- <img src="./img/body1_block.png" class="img-fluid body1_block w-100 ">-->
+  <img src="./img/body2_2.png" class="img-fluid w-100 mt-2" >
   <div class="logo-1 d-flex position-absolute">
    <a href="https://www.momoshop.com.tw/main/Main.jsp" class="me-1"> 
     <img src="./img/logo1_1.png" class="img-fluid">
